# health_agent_service

./: .gitignore  HELP.md  langgraph.json  main.py  pom.xml  pyproject.toml
agent/: graph.py  nodes.py  prompts.py  state.py
config/: llm_config.py
routers/: health_router.py
schemas/: chat_schema.py  health_schema.py
src/main/java/com/fitai/health/: HealthApplication.java
src/main/java/com/fitai/health/client/: PythonAiClient.java
src/main/java/com/fitai/health/client/dto/: AiHealthPlanResponse.java
src/main/java/com/fitai/health/common/api/: Result.java
src/main/java/com/fitai/health/common/constant/: RedisKeyPrefix.java
src/main/java/com/fitai/health/common/exception/: BusinessException.java  GlobalExceptionHandler.java
src/main/java/com/fitai/health/config/: CorsConfig.java  MybatisPlusConfig.java
src/main/java/com/fitai/health/controller/: HealthPlanController.java
src/main/java/com/fitai/health/mapper/: UserHealthMapper.java
src/main/java/com/fitai/health/model/dto/: AiHealthPlanResponse.java  HealthPlanRequestDTO.java
src/main/java/com/fitai/health/model/entity/: UserHealthDO.java
src/main/java/com/fitai/health/model/vo/: HealthPlanVO.java
src/main/java/com/fitai/health/service/: HealthPlanService.java
src/main/java/com/fitai/health/service/impl/: HealthPlanServiceImpl.java
src/main/resources/: application.yml
src/test/java/com/fitai/health/: HealthApplicationTests.java
