[project]
name = "health-agent-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "ipython>=9.14.1",
    "langchain>=1.3.4",
    "langchain-core>=1.4.1",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
